Added app icon, name as well as initial splash screen

--- a/mobile/android/app/src/main/res/values/styles.xml
+++ b/mobile/android/app/src/main/res/values/styles.xml
@@ -16,6 +16,9 @@
 		<item name="android:windowDrawsSystemBarBackgrounds">true</item>
 		<item name="android:windowTranslucentStatus">true</item>
 		<item name="android:windowTranslucentNavigation">true</item>
+		
+		<item name="android:windowBackground">@drawable/launch_screen</item>
+
     </style>
 
 </resources>
